# postfiat-wallet

./: README.md  pyproject.toml
src/components/: Onboarding.tsx
src/pft_wallet/: cli.py  config.py
src/pft_wallet/server/: api.py  app.py
src/pft_wallet/services/: blockchain.py  storage.py  task_storage.py  transaction.py
src/pft_wallet/static/: 404.html  index.html  index.txt
src/pft_wallet/static/_next/static/chunks/app/: layout-ca8f35523bb809c7.js  page-3dcacb017dc52c41.js
src/pft_wallet/ui/: App.tsx
src/pft_wallet/ui/app/: page.tsx
src/pft_wallet/ui/components/: AuthPage.tsx  Onboarding.tsx  PaymentsPage.tsx  ProposalsPage.tsx  RewardsPage.tsx  VerificationPage.tsx  navbar.tsx  summarypage.tsx
src/pft_wallet/ui/components/modals/: AcceptTaskModal.tsx  RefuseTaskModal.tsx  RequestTaskModal.tsx  SubmitVerificationModal.tsx
src/pft_wallet/ui/context/: AuthContext.tsx
src/pft_wallet/ui/types/: auth.ts
src/pft_wallet/utils/: browser.py  updater.py
src/postfiat_wallet/: cli.py  config.py
src/postfiat_wallet/server/: api.py  app.py
src/postfiat_wallet/services/: blockchain.py  task_storage.py
src/postfiat_wallet/static/: 404.html  index.html  index.txt
src/postfiat_wallet/static/_next/static/chunks/: 529.1b82102d0fc6b6d2.js  main-app-c9a05c2eb61e9ce5.js  webpack-d33d87369c971206.js
src/postfiat_wallet/static/_next/static/chunks/app/: layout-53ccce54458becac.js  page-30762848d475659c.js  page-379008c563dd666f.js  page-39c4b9d675d49158.js  page-417c77018239556f.js  page-4599c4cacc083000.js  page-4872a81e3f387240.js  page-48bba03255599651.js  page-67906bf616a3f6d3.js  page-b5b2fe8d4a3bca30.js  page-d9d5e5acb746f691.js  page-e5ad08ed1ae21f36.js  page-e6d544b95a98cae5.js
src/postfiat_wallet/static/_next/static/css/: 3bf6b440400ff15d.css  3d68228bc22b4425.css  afc3739b6b291b39.css
src/postfiat_wallet/ui/: next.config.ts
src/postfiat_wallet/ui/app/: layout.tsx  page.tsx
src/postfiat_wallet/ui/components/: AuthPage.tsx  MemosPage.tsx  Onboarding.tsx  PaymentsPage.tsx  ProposalsPage.tsx  RewardsPage.tsx  SettingsPage.tsx  SummaryPage.tsx  navbar.tsx
src/postfiat_wallet/ui/components/modals/: AcceptTaskModal.tsx  FinalVerificationModal.tsx  LogPomodoroModal.tsx  PaymentModal.tsx  RefuseTaskModal.tsx  RequestTaskModal.tsx  SubmitVerificationModal.tsx
src/postfiat_wallet/ui/context/: AuthContext.tsx
src/postfiat_wallet/ui/services/: apiService.ts
src/postfiat_wallet/utils/: browser.py  updater.py
