[build-system]
requires = ["hatchling~=1.26.0"]
build-backend = "hatchling.build"

[project]
name = "postfiat-wallet"
dynamic = ["version"]
description = "Local Wallet for the Post Fiat Network"
requires-python = ">=3.12"
readme = "README.md"
dependencies = [
    "boto3~=1.36.24",
    "click~=8.1.8",
    "cryptography~=44.0.1",
    "dynaconf~=3.2.10",
    "fastapi~=0.115.8",
    "packaging~=24.2",
    "postfiat-sdk>=0.1.0a0,<0.1.1",
    "uvicorn~=0.34.0",
    "web3~=7.8.0",
    "websockets~=13.1",
    "xrpl-py~=4.0.0",
]

[tool.hatch.build.targets.wheel.force-include]
"src/postfiat_wallet/static" = "postfiat_wallet/static"

[project.scripts]
postfiat-wallet = "postfiat_wallet.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/postfiat_wallet"]

[tool.hatch.version]
source = "code"
path = "__about__.py"

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "black",
    "isort",
    "mypy",
    "hatch",
]