[build-system]
requires = ["hatchling~=1.26.0"]
build-backend = "hatchling.build"

[project]
name = "postfiat-wallet"
dynamic = ["version"]
description = "Local Wallet for the Post Fiat Network"
requires-python = ">=3.12"
readme = "README.md"
dependencies = [
    "fastapi",
    "uvicorn",
    "boto3",
    "dynaconf",
    "websockets",
    "click",
    "xrpl-py",
    "cryptography",
    "postfiat-sdk==0.1.0a202503022217",
    "requests",
    "packaging",
]

[tool.hatch.build.targets.wheel.force-include]
"src/postfiat_wallet/static" = "postfiat_wallet/static"

[project.scripts]
postfiat-wallet = "postfiat_wallet.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/postfiat_wallet"]

[tool.hatch.version]
source = "code"
path = "__about__.py"

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "black",
    "isort",
    "mypy",
    "hatch",
]